# SPICEv3

./: build_tree.txt  pyproject.toml
src/: Medical.json  README.md  ai_engine.py  bankalert.json  config.json  config_loader.py  contacts.json  defaults.py  familyemergency.json  main.py  message_manifest.json  network_queue.py  notification_channel.py  participant.py  path_utils.py  requirements.txt  session.py  telemetry.py  template.json
