[project]
name = "spice"
version = "2.0.0"
description = "Software Platform for Investigating Cyber Experiences"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[tool.flet]
org = "edu.vcu.vcoa.spice"
product = "SPICE"

[tool.flet.app]
path = "src"
module = "main"

[tool.flet.android]
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.VIBRATE",
    "android.permission.POST_NOTIFICATIONS",
]

# Splash + theme
[tool.flet.android.meta_data]
"com.google.android.gms.version" = "@integer/google_play_services_version"